Fix messages being too low.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ blockquote {
   .center_msg > .msg {
     position: relative;
     left: -50%;
-    top: -50%;
+    margin-top: -25%;
     background-color: #ddd;
     padding: 20px; }
 
